# bevy-modding

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/core/: Cargo.toml
example/core/src/: main.rs
example/game_mod/: Cargo.toml
example/game_mod/src/: lib.rs
src/: lib.rs
