[package]
name = "game_mod"
version = "0.1.0"
authors = ["Arkadiusz Zylkowski <arkadiuszzylkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
live-reload = "0.2.0"
bevy = "0.5.0"
bevy-modding = { version = "0.1.0", path = "../../../bevy-modding"}